--- a/assignment_4/ir4-sample/.classpath
+++ b/assignment_4/ir4-sample/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/hansb/Documents/GitHub/TDT4117-IR/assignment_4/ir4-sample/lib/lucene-analyzers-common-4.10.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/hansb/Documents/GitHub/TDT4117-IR/assignment_4/ir4-sample/lib/lucene-core-4.10.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/hansb/Documents/GitHub/TDT4117-IR/assignment_4/ir4-sample/lib/lucene-demo-4.10.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.10.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-4.10.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-demo-4.10.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
